{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 41,
  "lineage": "8279350c-3035-cede-2be9-be9fa6494eb0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "aws_ecs_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Kan-Sym-Services-ELB/07f21324b1e06a93",
            "arn_suffix": "app/Kan-Sym-Services-ELB/07f21324b1e06a93",
            "dns_name": "internal-Kan-Sym-Services-ELB-1037964722.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Kan-Sym-Services-ELB/07f21324b1e06a93",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Kan-Sym-Services-ELB",
            "security_groups": [
              "sg-09a4c12052a8fa6c6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-045f15dc2d848718a"
              },
              {
                "subnet_id": "subnet-0c4816f7842153167"
              }
            ],
            "subnets": [
              "subnet-045f15dc2d848718a",
              "subnet-0c4816f7842153167"
            ],
            "vpc_id": "vpc-069d202f6c6abf29a",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-target-group/34a178b67fdbc4c8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Kan-Sym-Services-ELB/07f21324b1e06a93",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_target_group.ecs-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "auditevents",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-uat-audit/a66e0af9b3987996",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68/e16eee4e65532f03",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/auditevents*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/auditevents*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68/e16eee4e65532f03",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68",
            "priority": 100
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_alb_target_group.uat-auditevents"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "checklistcrawler",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-uat-check/db7f501034cf2f37",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68/9eef125e07cdb9f1",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/checklistcrawler*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/checklistcrawler*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68/9eef125e07cdb9f1",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68",
            "priority": 120
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_alb_target_group.uat-checklistcrawler"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "dataaudit",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-uat-dataaudit/db55bcd13df6bfb2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68/10e0376a9f35db3e",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/dataaudit*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/dataaudit*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68/10e0376a9f35db3e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68",
            "priority": 130
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_alb_target_group.uat-dataaudit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "elasticsearchindexer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-uat-elastic/5f50bc959462b67f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68/eb74f7fc73660f46",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/elasticsearchindexer*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/api/elasticsearchindexer*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68/eb74f7fc73660f46",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Kan-Sym-Services-ELB/07f21324b1e06a93/d87f25f293634f68",
            "priority": 140
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_alb_target_group.uat-elasticsearchindexer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-target-group/34a178b67fdbc4c8",
            "arn_suffix": "targetgroup/Kan-Sym-Services-target-group/34a178b67fdbc4c8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-target-group/34a178b67fdbc4c8",
            "lambda_multi_value_headers_enabled": false,
            "name": "Kan-Sym-Services-target-group",
            "port": 8005,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 300,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069d202f6c6abf29a"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "uat-auditevents",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-uat-audit/a66e0af9b3987996",
            "arn_suffix": "targetgroup/Kan-Sym-Services-uat-audit/a66e0af9b3987996",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-uat-audit/a66e0af9b3987996",
            "lambda_multi_value_headers_enabled": false,
            "name": "Kan-Sym-Services-uat-audit",
            "port": 8001,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 300,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069d202f6c6abf29a"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "uat-checklistcrawler",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-uat-check/db7f501034cf2f37",
            "arn_suffix": "targetgroup/Kan-Sym-Services-uat-check/db7f501034cf2f37",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-uat-check/db7f501034cf2f37",
            "lambda_multi_value_headers_enabled": false,
            "name": "Kan-Sym-Services-uat-check",
            "port": 8002,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 300,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069d202f6c6abf29a"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "uat-dataaudit",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-uat-dataaudit/db55bcd13df6bfb2",
            "arn_suffix": "targetgroup/Kan-Sym-Services-uat-dataaudit/db55bcd13df6bfb2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-uat-dataaudit/db55bcd13df6bfb2",
            "lambda_multi_value_headers_enabled": false,
            "name": "Kan-Sym-Services-uat-dataaudit",
            "port": 8003,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 300,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069d202f6c6abf29a"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "uat-elasticsearchindexer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-uat-elastic/5f50bc959462b67f",
            "arn_suffix": "targetgroup/Kan-Sym-Services-uat-elastic/5f50bc959462b67f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Kan-Sym-Services-uat-elastic/5f50bc959462b67f",
            "lambda_multi_value_headers_enabled": false,
            "name": "Kan-Sym-Services-uat-elastic",
            "port": 8004,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 300,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069d202f6c6abf29a"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb"
          ]
        }
      ]
    }
  ]
}